# MimiClaw-OrangePi

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DELIVERY-SUMMARY.md  Dockerfile  FINAL-DELIVERY-REPORT.md  IDENTITY.md  LICENSE  MEMORY.md  Makefile  MimiClaw-v2-Architecture.md  MimiClaw-v2-Test-Plan.md  OPTIMIZATION.md  PHASE2-DELIVERY.md  PHASE3-OPTIMIZATION.md  PHASE4-DOCS-REPORT.md  PROJECT-CONFIG.md  README.md  README_CN.md  README_zh.md  SOUL.md  TEST-CHECKLIST.md  USER.md  _p_l_u_g_i_n-_d_e_v-_g_u_i_d_e_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  async__io_8h.html  async__io_8h_source.html  classes.html  dir_0b338f32e9dd081b4cc642c32586a438.html  dir_1f88cfa1c5724ed2057726f456e3e0ae.html  dir_302fb67190c1c42677e64d2cd1a9e619.html  dir_349708b1bf9a43f109e1c0b840c3766c.html  dir_38a4234003d6eb91e5f51af2160b5e8e.html  dir_38c8d24aef3972a7f87b834274e76e31.html  dir_3e8c22cf388d0ad4c5f60c985c6a7c3d.html  (+70 more)
.github/workflows/: build.yml  docs.yml  pr-check.yml  release.yml  test.yml
.openclaw/: workspace-state.json
agents/dev-coder/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md
agents/dev-tester/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md
agents/media-creator/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md
apps/: CMakeLists.txt
apps/mimi-gateway/: CMakeLists.txt
apps/mimi-gateway/config/: gateway.json.in
apps/mimi-gateway/include/: gateway.h  telegram.h  websocket.h
apps/mimi-gateway/src/: gateway.c  main.c  telegram.c  websocket.c
cmake/: mimi.pc.in
cmd/cli/: main.go
config/: config.yaml  mimi_config.example.json
coverage-report/: coverage-summary.txt  index.html
docs/: API-REFERENCE.md  ARCHITECTURE.md  DEVELOPER-GUIDE.md  FAQ.md  QUICKSTART.md
docs/api/html/: index.html
docs/doxygen/: Doxyfile  header.html  main_page.md
docs/examples/: example_basic_chat.c  example_config.c  example_context.c  example_gateway.c  example_plugins.c
hardware/: README.md
libs/: BUILD_LOG.md  CMakeLists.txt  Makefile  README.md  async_io.c.gcov  core.c.gcov  memory.c.gcov  mempool.c.gcov
libs/cmake/: mimi-config.pc.in
libs/examples/: example_config.c  example_core.c  example_memory.c  example_tools.c
libs/libmimi-config/: CMakeLists.txt
libs/libmimi-config/include/: mimi_config.h
libs/libmimi-config/src/: config.c
libs/libmimi-core/: CMakeLists.txt
libs/libmimi-core/include/: async_io.h  mempool.h  mimi_core.h
libs/libmimi-core/src/: async_io.c  core.c  mempool.c
libs/libmimi-memory/: CMakeLists.txt
libs/libmimi-memory/include/: mimi_memory.h
libs/libmimi-memory/src/: memory.c
libs/libmimi-tools/: CMakeLists.txt
libs/libmimi-tools/include/: mimi_tools.h
libs/libmimi-tools/src/: loader.c  mimi_tools.c  registry.c
libs/tests/: CMakeLists.txt  test_core.c
libs/tests/benchmarks/: bench_memory.c  test_concurrent.c  test_latency.c  test_startup.c
logs/: DAILY.md  README.md
logs/dev-coder/: DAILY.md
logs/dev-tester/: DAILY.md
logs/media-creator/: DAILY.md
pkg/agent/: agent.go
pkg/config/: config.go  config_test.go
pkg/hardware/: claw.go  hardware_test.go
pkg/memory/: memory.go  memory_test.go
pkg/providers/: provider.go
pkg/tools/: tools.go
plugins/: CMakeLists.txt  Makefile  PLUGIN-DEV-GUIDE.md  README.md  core
plugins/plugin-echo/: CMakeLists.txt
plugins/plugin-echo/src/: echo_plugin.c
plugins/plugin-file-ops/: CMakeLists.txt
plugins/plugin-file-ops/src/: file_ops_plugin.c
plugins/plugin-memory/: CMakeLists.txt
plugins/plugin-memory/src/: memory_plugin.c
plugins/plugin-time/: CMakeLists.txt
plugins/plugin-time/include/: time_plugin.h
plugins/plugin-time/src/: time_plugin.c
plugins/plugin-web-search/: CMakeLists.txt  README.md
plugins/plugin-web-search/src/: web_search_plugin.c
plugins/tests/: CMakeLists.txt  test_all_plugins  test_all_plugins.c  test_echo_plugin.c  test_plugin_loader.c  test_time_plugin.c
scripts/: backup.sh  benchmark.sh  build.sh  deploy.sh  install.sh  perf-comparison.md  run-perf-tests.sh  test_concurrent_sessions.sh  test_memory_usage.sh  test_response_latency.sh  test_startup_time.sh  wrk_chat.lua
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  (+93 more)
shared/: README.md  SHARED-CONTEXT.md
shared/data/: BUGS.md  TASKS.md
shared/docs/: INDEX.md
src/agent/: agent_loop.c  agent_loop.h
src/core/: cache.c  cache.h  config.c  config.h  connection_pool.c  connection_pool.h  crypto.c  crypto.h  logger.c  logger.h  main.c  metrics.c  metrics.h
src/gateway/: http_server.c  http_server.h  telegram_bot.c  telegram_bot.h  websocket_server.c  websocket_server.h
src/memory/: memory_store.c  memory_store.h
src/tools/: tool_files.c  tool_get_time.c  tool_registry.c  tool_registry.h  tool_web_search.c
tests/: CMakeLists.txt  README.md  test_config.c  test_memory.c
tests/core/: test_agent_loop.c
tests/gateway/: CMakeLists.txt  test_gateway.c
tests/integration/: test_chat_flow.sh  test_concurrent_sessions.sh  test_config_hot_reload.sh  test_plugin_chain.sh
tests/perf/: test_gateway_perf.c
tests/unit/config/: test_config.c  test_validate.c  test_watch.c
tests/unit/core/: test_async_io.c  test_mempool.c
tests/unit/memory/: test_memory.c  test_pool.c  test_session.c
tests/unit/plugins/: test_plugin_echo.c  test_plugin_fileops.c  test_plugin_memory.c  test_plugin_time.c  test_plugin_websearch.c
tests/unit/tools/: test_loader.c  test_registry.c
